[metadata]
name = leepy
version = 0.2.0
author = Daron Chabot
author_email = dchabot@slac.stanford.edu
license=MIT
description = LBNL Embedded Ethernet Protocol tooling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.lbl.gov/dchabot/leepy
project_urls =
    Bug Tracker = https://gitlab.lbl.gov/dchabot/leepy/issues
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = 
    cothread
    numpy
    matplotlib
py_modules = leep.feed_launcher

[options.package_data]
* = *.bob, launcher.conf

[options.packages.find]
exclude =
    leep.test.*
    leep.test

[options.entry_points]
console_scripts =
    feed_launcher = leep.feed_launcher:main
