[metadata]
name = leep
version = 1.0.0
author = Michael Davidsaver
author_email = mdavidsaver@gmail.com
license=BSD
description = LBNL Embedded Ethernet Protocol tooling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.lbl.gov/drivers/leep
project_urls =
    Bug Tracker = https://gitlab.lbl.gov/drivers/leep/issues
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    cothread
    numpy
    matplotlib
py_modules = leep.feed_launcher

[options.package_data]
* = *.bob, launcher.conf

[options.packages.find]
exclude =
    leep.test.*
    leep.test

[options.entry_points]
console_scripts =
    feed_launcher = leep.feed_launcher:main
