[metadata]
name = leep
version = 1.0.0
author = Michael Davidsaver
author_email = mdavidsaver@gmail.com
license=BSD
description = LBNL Embedded Ethernet Protocol tooling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.lbl.gov/drivers/leep
project_urls =
    Bug Tracker = https://gitlab.lbl.gov/drivers/leep/issues
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    cothread
    numpy
    matplotlib

[options.package_data]
* = *.bob

[options.packages.find]
exclude =
    leep.test.*
    leep.test
